--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "babel-node test/test-index.js",
+    "test": "babel-node test/root-test.js",
     "start": "(cd showcase && yarn && yarn start)",
     "lint": "eslint ./"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^7.1.4",
@@ -20,13 +21,16 @@
     "eslint-config-uber-es2015": "^3.0.1",
     "eslint-plugin-babel": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
+    "tape": "^4.10.2",
     "webpack": "4",
     "webpack-cli": "^3.0.8",
     "webpack-command": "^0.2.1",
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
-
+    "vega": "^5.4.0",
+    "vega-embed": "^4.2.0",
+    "vega-lite": "^3.3.0"
   },
   "babel": {
     "presets": [
