--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
+    "canvas": "^2.5.0",
     "vega": "^5.4.0",
     "vega-embed": "^4.2.0",
     "vega-lite": "^3.3.0"
