--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "canvas": "^2.5.0",
     "datalib": "^1.9.2",
+    "outliers": "^0.0.3",
     "vega": "^5.4.0",
     "vega-datasets": "^1.25.0",
     "vega-embed": "^4.2.0",
