--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "canvas": "^2.5.0",
     "datalib": "^1.9.2",
     "outliers": "^0.0.3",
+    "pixelmatch": "^5.0.2",
     "vega": "^5.4.0",
     "vega-datasets": "^1.25.0",
     "vega-embed": "^4.2.0",
