make all of the integration test run

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "plain-test": "babel-node test/root-test.js",
     "test": "npm run plain-test | node_modules/faucet/bin/cmd.js",
     "serve": "(cd server && yarn && yarn start)",
+    "serve-debug": "(cd server && yarn && yarn start-debug)",
     "integration": "babel-node test/integration-test.js"
   },
   "devDependencies": {
