clean up my junk, write a little CI script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "npm run plain-test | node_modules/faucet/bin/cmd.js",
     "serve": "(cd server && yarn && yarn start)",
     "serve-debug": "(cd server && yarn && yarn start-debug)",
-    "integration": "babel-node test/integration-test.js"
+    "integration": "babel-node test/integration-test.js",
+    "full-test": "babel-node test/full-test.js"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
