--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.22.0",
     "eslint": "^3.13.1",
+    "eslint-config-prettier": "^6.1.0",
     "eslint-config-uber-es2015": "^3.0.1",
     "eslint-plugin-babel": "^4.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^6.10.0",
     "faucet": "^0.0.1",
+    "prettier": "^1.18.2",
     "tape": "^4.10.2",
     "webpack": "4",
     "webpack-cli": "^3.0.8",
