--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,7 @@
   ],
   "rules": {
     "consistent-return": 0,
-    "max-len": [1, 110, 4],
+    "max-len": [1, 110, 4, {"ignoreStrings": true}],
     "max-params": ["error", 6],
     "object-curly-spacing": 0,
     "babel/object-curly-spacing": 2
