--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "serve-debug": "(cd server && yarn && yarn start-debug)",
     "integration": "babel-node test/integration-test.js",
     "full-test": "babel-node test/full-test.js",
-    "reduce-dups": "(cd gh-specs && babel-node ./reduce-dups-in-gh-specs.js)"
+    "reduce-dups": "(cd gh-specs && babel-node ./reduce-dups-in-gh-specs.js)",
+    "prepare-vega-lite-examples-for-integration": "babel-node by-hand-examples/split-all-into-singles.js"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
