--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "canvas": "^2.5.0",
     "datalib": "^1.9.2",
     "dynamic-time-warping": "^1.0.0",
+    "hex-over": "^0.0.2",
     "hoopoe": "^1.0.0",
     "node-fetch": "^2.6.0",
     "outliers": "^0.0.3",
