check in initial work on the evaulation, very confuse why nothing is failing

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "integration": "babel-node test/integration-test.js",
     "full-test": "babel-node test/full-test.js",
     "reduce-dups": "(cd gh-specs && babel-node ./reduce-dups-in-gh-specs.js)",
-    "prepare-vega-lite-examples-for-integration": "babel-node by-hand-examples/split-all-into-singles.js"
+    "prepare-vega-lite-examples-for-integration": "babel-node by-hand-examples/split-all-into-singles.js",
+    "do-eval": "babel-node evaluation-flail/eval-generator.js"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
