--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test": "npm run plain-test | node_modules/faucet/bin/cmd.js",
     "serve": "(cd server && yarn && yarn start)",
     "serve-debug": "(cd server && yarn && yarn start-debug)",
+    "public-server": "(cd server && yarn && yarn public-server)",
+    "build-serve": "(cd server && yarn && yarn build)",
     "integration": "babel-node test/integration-test.js",
     "full-test": "babel-node test/full-test.js",
     "reduce-dups": "(cd gh-specs && babel-node ./reduce-dups-in-gh-specs.js)",
