--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "babel-preset-es2017": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "request": "^2.88.0"
   },
