--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "test": "npm run plain-test | node_modules/faucet/bin/cmd.js",
     "serve": "(cd server && yarn && yarn start)",
     "serve-debug": "(cd server && yarn && yarn start-debug)",
-    "public-server": "(cd server && yarn public-server)",
+    "public-server": "(cd server && public-server)",
     "build-serve": "(cd server && yarn && yarn build)",
     "integration": "babel-node test/integration-test.js",
     "full-test": "babel-node test/full-test.js",
     "reduce-dups": "(cd gh-specs && babel-node ./reduce-dups-in-gh-specs.js)",
     "prepare-vega-lite-examples-for-integration": "babel-node by-hand-examples/split-all-into-singles.js",
-    "do-eval": "babel-node evaluation/eval-generator.js"
+    "do-eval": "babel-node evaluation/eval-generator.js",
+    "heroku-postbuild": "yarn build-serve"
   },
   "devDependencies": {
     "autoprefixer": "^9.7.3",
