--- a/showcase/package.json
+++ b/showcase/package.json
@@ -4,7 +4,8 @@
   "version": "0.1.0",
   "scripts": {
     "start": "webpack-dev-server --progress --hot --port 3001 --open",
-    "build": "NODE_ENV=production webpack"
+    "build": "NODE_ENV=production webpack",
+    "build-asserts": "(cd .. && yarn)"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
