--- a/showcase/package.json
+++ b/showcase/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^16.8.6",
     "react-monaco-editor": "^0.32.1",
     "react-select": "^3.0.4",
+    "react-tiny-popover": "^4.0.0",
     "vega": "^5.8.0",
     "vega-lite": "^4.0.0-beta.11"
   }
