--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
     "vega-embed": "^4.2.0",
     "vega-lite": "^3.3.0"
   },
+  "resolutions": {
+    "lodash": "^4.17.12"
+  },
   "babel": {
     "presets": [
       "es2015",
